# MaLB-SC-generation-module

./: .gitignore  README.md  compare-branche.sh  compare-branches.sh  pyproject.toml
.github/: pull_request_template.md
data/insights/: data.json
data/off_topic_descriptions/: data.json
data/smart_contract_descriptions/: data.json  txts_to_json.py
data/smart_contract_descriptions/txts/: d1.txt  d3.txt  d4.txt  d5.txt  d7.txt
docs/source/: conf.py  fastapi_main.rst  models.rst  modules.rst  utils.rst
examples/: d1.txt  d2.txt  d3.txt  d5.txt  d6.txt  d7.txt  d8.txt  output.json  txts_to_json.py
examples/off_topic_descriptions/: data.json
examples/smart_contract_descriptions/: d1.txt  d2.txt  d3.txt  d4.txt  d5.txt  d6.txt  d7.txt  d8.txt  data.json  txts_to_json.py
examples/smart_contract_descriptions/json/: data.json
examples/smart_contract_descriptions/txts/: d2.txt  d6.txt  d8.txt
legacy/: fastapi_main.py  index.html  main.py
legacy/agents/: base_agent.py
legacy/factory/: agent_factory.py
legacy/models/: base_model.py  llama3_model.py  openai_model.py
legacy/utils/: exceptions.py
old/: agent_api.py
old/agents/: basic_agent.py
old/malb_modules/RP/: dspy_sketch.py
old/models/: groq_model.py
old/utils/: mithril_checker.py
sketches/: .subject_assess_rating  RP_dspy_module.ipynb  chatbot.py  concept_graph(deprecated).ipynb  dspy_testing.ipynb  testing_groq.py  translate_grug.ipynb
sketches/RP_module/: M3.py  RP_dspy_module.ipynb  module_optimisation.ipynb  test.py
sketches/RP_module/optimised_modules/: M11_ValidateTopic_opt.json  M2_InferRequirements_opt.json  M31_GenerateAttributes_opt.json
sketches/dspy_tutorials/: translate_grug.ipynb
sketches/javascript_gui/: app.py  script.js
sketches/js/: index.html  styles.css
sketches/streamlit/: ask_questions.ipynb  ui.py
sketches/streamlit/.streamlit/: config.toml
sketches/templates/: index.html
sketches/tutorials/: tanuki_approach.ipynb
src/: agents.py  app.py  attributes.json  datapipe.py  fastapi_main.py  generation_launcher.py  interaction_app.py  m2_launcher.py  main.py  malb_launcher.py
src/InteractionApp/: streamlit_app.py
src/InteractionApp/output/: genesis_features.json
src/ModGen/: MaLB.py  MaLB_bricks.py  run_MaLB.py  run_sttmd.py
src/ModGen/alignment_module/: alignment_assessor.py
src/ModGen/assessment_module (unused)/: .solhint.json  mithril_checker.py  utils.py
src/ModGen/generation_module/: syntax_generator.py
src/ModGen/static_linting/: solhint_analyzer.py  syntax_checker.py
src/ModGen/utils/: datapipe.py  hline.py  verbose_logger.py
src/Modules/: abstract_module.py
src/Modules/RP/: coordinator.py  manager.py  parser.py  (+1 more)
src/agents/: base_agent.py  basic_agent.py
src/app_streamlit/: app.py  ask_questions.ipynb
src/contract_builder/: agent.py  agents.py  index.html  main.py  oai_pipeline.py  oai_pipeline_deprecated.py
src/factory/: agent_factory.py
src/models/: base_model.py  groq_model.py  llama3_model.py  openai_model.py
src/tutorials/: main.py
src/utils/: exceptions.py
tests/: test_hello_world.py
(+1286 files in other folders)
