[tool.poetry]
name = "contract-builder"
version = "0.1.0"
description = ""
authors = ["yago-mendoza <yagomendoza.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "contract_builder", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.2.0"
ruff = "^0.3.2"
pytest = "^8.1.1"
pre-commit = "^3.6.2"

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.ruff]
# Same as Black.
line-length = 120

exclude = ["jupyter_notebook_config.py"]
select = [
    "E",  # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.ruff.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
